# PathwayLens

./: .coveragerc  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  INSTALL.md  LICENSE  Makefile  PATHWAYLENS_2.0_UPGRADE_BLUEPRINT.md  README.md  ROADMAP.md  TUTORIAL.md  environment.yml  pyproject.toml  pytest.ini  reproduce_viz.py  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  setup.sh  test_system.py  tox.ini  validate_installation.py
.github/workflows/: ci.yml
data/examples/: README.md  cancer_genes.txt  de_genes.txt
docs/: API_REFERENCE.md  BIOINFORMATICS_VISUALIZATION_GUIDE.md  CHANGELOG.md  CLI_REFERENCE.md  CONDA_SETUP.md  CONTRIBUTING.md  INSTALLATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  USER_GUIDE.md
docs/.organized/: RESEARCH_ROADMAP.md  TEST_RESULTS.md  UPGRADE_ROADMAP.md
docs/user_guide/: CLI_REFERENCE.md
examples/: basic_ora_example.py
frontend/: README.md  env.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
infra/ci-cd/: github-actions.yml
infra/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  init.sql  nginx.conf
infra/kubernetes/: api.yaml  frontend.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
pathwaylens/: __init__.py
pathwaylens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pathwaylens_api/: __init__.py  celery_app.py  database_schema.sql  main.py
pathwaylens_api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
pathwaylens_api/routes/: __init__.py  analyze.py  auth.py  compare.py  config.py  info.py  jobs.py  normalize.py  visualize.py
pathwaylens_api/schemas/: __init__.py  analyze.py  auth.py  compare.py  config.py  jobs.py  normalize.py  visualize.py
pathwaylens_api/tasks/: __init__.py  analyze.py  cleanup.py  compare.py  maintenance.py  normalize.py  visualize.py
pathwaylens_api/utils/: __init__.py  database.py  dependencies.py  exceptions.py  storage.py
pathwaylens_cli/: __init__.py  __main__.py  main.py
pathwaylens_cli/commands/: __init__.py  analyze.py  compare.py  config.py  database.py  info.py  normalize.py  plugin.py  visualize.py  workflow.py
pathwaylens_cli/utils/: __init__.py  api_client.py  batch_processor.py  config.py  config_loader.py  exceptions.py  pipeline.py
pathwaylens_core/: __init__.py  api.py  config.py  exceptions.py  species.py  types.py
pathwaylens_core/analysis/: __init__.py  bayesian_engine.py  comparison_engine.py  competitive_ora_engine.py  consensus_engine.py  diagnostics.py  engine.py  gsea_engine.py  gsva_engine.py  multi_omics_engine.py  network_engine.py  ora_engine.py  pathway_interaction_engine.py  sc_engine.py  schemas.py  statistical_utils.py  topology_engine.py
pathwaylens_core/comparison/: __init__.py  clustering_analyzer.py  correlation_analyzer.py  engine.py  new_engine_methods.py  overlap_analyzer.py  schemas.py  visualization.py
pathwaylens_core/data/: __init__.py  database_manager.py
pathwaylens_core/integration/: __init__.py  api_manager.py  enrichr.py  gprofiler.py  model_cache.py  pretrained_models.py  reactome_api.py  string_api.py
pathwaylens_core/io/: __init__.py  anndata_io.py  de_tools.py  gct_io.py  gmt_io.py  output_manager.py  r_loader.py  tenx_io.py
pathwaylens_core/mapping/: __init__.py  mapper.py
pathwaylens_core/multi_omics/: __init__.py  (+6 more)
tests/: TEST_NOTES.md  __init__.py  conftest.py  generate_test_data.sh  run_all_tests.sh  test_gold_standard.py
(+189 files in other folders)
